@startuml
package Product {
  interface "ChildLayerProperties (CLP)" as clp
  abstract class "DataProduct (DP)" as dp

  abstract class "ProductList (PL)" as pl
  class "LayerGroup (LG)" as lg
  class "Map (MAP)" as map

  abstract class "SingleActor (SA)" as sa
  class "FacadeLayer (FL)" as fl
  abstract class "DataSetView (DSV)" as dsv << package data >>
  class "ExternalMapLayers" as el
  class "ExternalMapService" as es

  class "PropertiesInFacade::CLP" as pif << (H, grey) Association Class >>
  class "PropertiesInList::CLP" as pil << (H, grey) Association Class >>
  
  class "ThermGroup" as tg

  dp <|-- pl

  pl <|-- lg
  pl <|-- map

  dp <|-- sa

  sa <|-- dsv
  sa <|-- fl
  sa <|-- el

  pl "1" -right- "1..n" pil : "      "
  pil "*" -right- "1" sa : "      "

  map "*" -- "0..1" map : "background"

  fl "1" -- "1..n" pif : "      "
  pif "*" -up- "1" dsv : "      "

  el "1-n" -- "1" es
  
  dsv "*" -- "0..1" tg
  el "*" -- "0..1" tg
}
@enduml